# UDPServer

./: CMakeLists.txt  README.md  example.json
common/: logger.h
udpclient/: CMakeLists.txt  main.cpp  udpclient.cpp  udpclient.h
udpserver/: CMakeLists.txt  config.h  config.json  datastorage.h  generator.cpp  generator.h  main.cpp  submitinfo.cpp  submitinfo.h  udpserver.cpp  udpserver.h
